--- a/src/app/actualiza-component/actualiza-component.component.html
+++ b/src/app/actualiza-component/actualiza-component.component.html
@@ -41,7 +41,14 @@
    
      <div class="col">
    
-      <input type="submit" class="btn btn-primary" id="boton1" value="Enviar" (click)="agregarEmpleado()">
+      <input type="submit" class="btn btn-primary" id="boton1" value="Enviar" (click)="actualizaEmpleado()">
+   
+   
+     </div>
+
+     <div class="col">
+   
+      <input type="submit" class="btn btn-primary" id="boton1" value="eliminar" (click)="eliminaEmpleado()">
    
    
      </div>
